--- a/configs/updown_plus_cbs_nocaps_val.yaml
+++ b/configs/updown_plus_cbs_nocaps_val.yaml
@@ -12,6 +12,15 @@ DATA:
   CLASSES_PER_IT : 32
   NUM_SAMPLES : 5
   ITERATIONS : 64
+  N_WAY : 5
+  K_SPT : 3
+  K_QRY : 3
+  TASK_NUM : 4
+  META_LR : 0.001
+  UPDATE_LR : 0.01
+  UPDATE_STEP : 5
+  UPDATE_STEP_TEST : 10
+
 
 
   CBS:
