--- a/configs/updown_plus_cbs_nocaps_val.yaml
+++ b/configs/updown_plus_cbs_nocaps_val.yaml
@@ -9,17 +9,17 @@ DATA:
   INFER_CAPTIONS: data/nocaps/nocaps_val_image_info.json
 
   MAX_CAPTION_LENGTH: 20
-  CLASSES_PER_IT : 32
+  CLASSES_PER_IT : 8
   NUM_SAMPLES : 5
   ITERATIONS : 64
-  N_WAY : 5
-  K_SPT : 3
-  K_QRY : 3
+  N_WAY : 8
+  K_SPT : 20
+  K_QRY : 20
   TASK_NUM : 4
   META_LR : 0.001
-  UPDATE_LR : 1.
+  UPDATE_LR : .05
   UPDATE_STEP : 5
-  UPDATE_STEP_TEST : 5
+  UPDATE_STEP_TEST : 10
 
 
 
